@@ -1,5 +1,3 @@
-from __future__ import absolute_import, division, print_function
-
 from ports.core import Dependency, Platform, Port, PortError, PortStub, Ports, Uses  # pylint: disable=import-self
 from ports import dependency, uses
 
