@@ -1,5 +1,3 @@
-from __future__ import absolute_import, division, print_function
-
 from os import getuid
 from pwd import getpwuid
 from socket import gethostname
