@@ -1,5 +1,3 @@
-from __future__ import absolute_import, division, print_function
-
 from ports.cran.port import CranPort
 from ports.cran.uses import Cran
 
